--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,17 @@
 Flask==3.0.0
 Flask-SocketIO==5.3.5
 python-socketio==5.10.0
-eventlet==0.33.3
+eventlet>=0.35.0
 gunicorn==21.2.0
 
 # HTTP Client
 requests==2.31.0
 
 # XML Processing
-lxml==4.9.4
+lxml>=5.2.0
 
 # Data Storage
-SQLAlchemy==2.0.23
+SQLAlchemy>=2.0.36
 
 # Utilities
 python-dotenv==1.0.0
