--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,8 @@ pytest-mock==3.12.0
 black==23.12.1
 flake8==7.0.0
 mypy==1.7.1
+
+# Neural Network (for training - optional for production)
+numpy>=1.24.0
+torch>=2.0.0
+tensorboard>=2.14.0
